Link to Transcendence home page instead of forums.

--- a/README
+++ b/README
@@ -1,8 +1,9 @@
 TRANSCENDENCE SOURCE CODE
 
 Copyright (c) 2015 by Kronosaur Productions, LLC.
+http://transcendence.kronosaur.com
 transcendence@kronosaur.com
-http://forums.kronosaur.com
+@Transcendence
 
 This package contains the source code for building the Transcendence.exe client,
 which is used to run any Transcendence adventure, including "Domina & Oracus".
